Use G1 garbage collection, turn on GC logging, collect GC metrics. We're hoping to learn more about why hosts occasionally see large Kafka lag, in a spiky pattern. See https://github.com/ExpediaDotCom/haystack-trends/issues/157.